fixing nav bg on mobile safari

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -88,8 +88,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 120vh;
     width: 100%;
+    background: $clr-white;
     transform: translateY(51%) scaleY(0);
 
     @include breakpoint(medium) {
@@ -101,25 +102,29 @@
       transform: translateY(0) scaleY(1);
     }
 
-    @media (max-width: 47.75em) {
-      &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 150vh;
-        background: $clr-white;
-        z-index: -1;
-      }
-    }
+    // @media (max-width: 47.75em) {
+    //   &::before {
+    //     content: "";
+    //     display: block;
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 150vh;
+    //     background: $clr-white;
+    //     z-index: -1;
+    //   }
+    // }
   }
 
   ul {
     padding: 0;
-    margin: 0;
+    margin: -20vh 0 0;
     list-style: none;
+
+    @include breakpoint(medium) {
+      margin: 0;
+    }
   }
 
   li {
